# Android_Native_Surface

./: CMakeLists.txt  README.md  build.bat  m.bat  mNativeSurface.bat  surface.bat
aosp_res/12/aosp_native_surface/src/: aosp_record.cpp
aosp_res/14/aosp_native_surface/src/: aosp_record.cpp  aosp_surface.cpp
examples/: CMakeLists.txt  demo.cpp  readme.txt  surface.cpp
examples/include/: draw.h  utils.h
hex/: build.bat  tohex.cpp
include/Android_touch/: touch.h  touch2.h
include/native_surface/aosp/: dev.h
include/tools/: main.h
libsurface/: CMakeLists.txt  surface.cpp
libsurface/include/Android_draw/: draw.h  vulkan_android.h  vulkan_wrapper.h
libsurface/include/Android_touch/: touch.h
libsurface/include/imgui/: imgui_impl_android.h
libsurface/include/native_surface/: extern_function.h
libsurface/private_include/aosp/: dev.h  native_surface_13.h  native_surface_9.h
libsurface/source/Android_draw/: draw.cpp  draw_opengl.cpp  draw_vulkan.cpp  vulkan_android.cpp
libsurface/source/Android_touch/: touch.cpp  touch2.cpp
libsurface/source/imgui/backends/: imgui_impl_android.cpp  imgui_impl_opengl3.cpp  imgui_impl_vulkan.cpp
libsurface/source/native_surface/: extern_function.cpp
screenRecord/: CMakeLists.txt  captureScreen.bat  captureScreen.cpp  record.bat  recordReceive.cpp  screenRecord.cpp
src/: recordReceive.cpp  surface.cpp
src/source/Android_touch/: touch.cpp
src/source/native_surface/: extern_function.cpp
